--- a/03-career.qmd
+++ b/03-career.qmd
@@ -46,7 +46,11 @@ Product managers (PMs) are at the heart of technology and innovation, acting as 
 
 ## Entrepreurship {.unnumbered}
 
-Entrepreneurship allows students to turn ideas into ventures—whether by founding startups, joining early-stage teams, or launching within established companies. It requires vision, grit, and a deep understanding of markets, customers, and value creation. Strategy students are equipped with frameworks and experience to navigate uncertainty and build businesses that scale.
+Entrepreneurship allows students to turn ideas into ventures, whether by founding startups, joining early-stage teams, or launching within established companies. It requires vision, grit, and a deep understanding of markets, customers, and value creation. Strategy students are equipped with frameworks and experience to navigate uncertainty and build businesses that scale.
+
+## Academia {.unnumbered}
+
+A career as a professor in academia enables students to contribute to the world of ideas—through research, teaching, and thought leadership. It demands curiosity, rigor, and the ability to frame and investigate complex questions. Strategy students who pursue the Research track gain the analytical tools, writing skills, and intellectual discipline to pursue graduate studies or academic careers, advancing knowledge that shapes organizations and society.
 
 ## Other Career Paths {.unnumbered}
 
