--- a/02-tracks.qmd
+++ b/02-tracks.qmd
@@ -5,9 +5,9 @@ editor: visual
 
 ## Business Analyst Track {.unnumbered}
 
-New students entering the program are initially part of Business Analyst track. 
+New students entering the program are initially part of the Business Analyst track. 
 
-During their senior year, students on the Business Analyst track will partner with a company to address real strategic issues as part of the Cougar Strategy Group, gaining hands-on experience and client management skills. Students complete this experience Fall or Winter semester of their senior year by enrolling in STRAT: 421 Strategy Implementation.
+During their senior year, students on the Business Analyst track will partner with a company to address real strategic issues as part of the Cougar Strategy Group, gaining hands-on experience and client management skills. Students complete this experience Fall or Winter semester of their senior year by enrolling in STRAT 421 - Strategy Implementation.
 
 As an alternative, students may opt into either the Product or Research track after taking the necessary prerequisites and gaining approval from the program director. 
 
@@ -84,9 +84,9 @@ There are no formal pre-reqs.
 
 ## Research Track {.unnumbered}
 
-The Research Track is designed for students who would like to publish a paper and/or prepare for  a Ph.D. in Strategy or a related field.
+The Research Track is designed for students who would like to work on and publish a paper for their experiential learning experience. This track is excellent preparation for a Ph.D. in Strategy or a related field.
 
-Students intersted in the Research Track should enroll in the following courses:
+Students interested in the Research Track should enroll in the following courses:
 
 MBA 593R Section 2 (Fall of Junior Year): Introduction to PhD-level Research in Management.
 
