update track chart

--- a/02-tracks.qmd
+++ b/02-tracks.qmd
@@ -45,7 +45,7 @@ Mid-way through Fall semester, interested students will interview with both a fa
 
 ![](images/2025-strategy-pm-track-flyer.png){fig-align="center" width="75%"}
 
-### Associate Product Builder (APB) Fellowship (Coming Soon; details may change) {.unnumbered}
+### Associate Product Builder (APB) Fellowship (tentatively offered starting Winter 2026; details subject to change) {.unnumbered}
 
 The Associate Product Builder (APB) Fellowship is a 12-month experiential learning experience where students build and deliver to market a pre-validated product concept from the Strategy Foundry and seek to earn real revenue, starting Winter of their junior year. The experience is partly modeled after LinkedIn's first-ever [Associate Product Builder (APB) program](https://careers.linkedin.com/pathways-programs/entry-level/apb). 
 
