--- a/02-tracks.qmd
+++ b/02-tracks.qmd
@@ -3,26 +3,55 @@ title: "Tracks"
 editor: visual
 ---
 
-Strategy students may complete one of several tracks each leading to a different experiential learning experience which are described below.
+Strategy students complete 1 of 4 tracks, each leading to a different experiential learning experience and likely career outcomes.
 
 ![](images/tracks.png){fig-align="center" width="100%"}
 
-## Business Analyst Track {.unnumbered}
+## Management Consulting {.unnumbered}
 
-New students entering the program are initially part of the Business Analyst track. 
+Originally known as the Business Analyst track, the Management Consulting track has formed the foundation of BYU's Strategy program since its inception in 2009. Founded by Jeff Dyer, a former Bain & Company consultant and internationally recognized expert in innovation and strategy, the Strategy major was initially designed to prepare BYU students for consulting positions at top-tier firms. While we continue this mission today, the program has expanded to offer multiple tracks that reflect the growing landscape of career opportunities in strategy.
 
-During their senior year, students on the Business Analyst track will partner with a company to address real strategic issues as part of the Cougar Strategy Group, gaining hands-on experience and client management skills. Students complete this experience Fall or Winter semester of their senior year by enrolling in STRAT 421 - Strategy Implementation.
+Management consultants are **external advisors** to organizations that help them solve challenging business problems, improve performance, and implement strategic changes. Consultants bring specialized expertise, objective perspectives, and a [structured problem-solving approach](https://slideworks.io/resources/mckinsey-problem-solving-process) when companies are looking for support to address a particular problem effectively.
 
-As an alternative, students may opt into either the Product or Research track after taking the necessary prerequisites and gaining approval from the program director. 
+Despite the disruption AI is causing throughout the economy and the impact of DOGE (see [**here**](https://managementconsulted.com/podcast/doge-federal-consulting-spend/) and [**here**](https://www.sourceglobalresearch.com/blog-post/the-impact-of-doge-on-the-global-consulting-industry)), demand for management consultants remains high with estimated revenues of ~\$400BN annually in the US. In fact, the AI disruption presents new opportunities for management consultants to add value to organizations addressing the effects of AI on their workforce and on their business.
 
-## Product Track {.unnumbered}
+McKinsey, Bain, and BCG (MBB) are the best known global consulting firms, however there is a long list of other excellent firms that you should consider. Because of the notoriety of the MBB firms, they receive an exceptionally high volume of applications, generally only hiring [1\% of applicants](https://casecoach.com/b/how-selective-are-bain-bcg-and-mckinsey-through-the-application-process/).
+
+When firms are only hiring one percent of applicants, it becomes somewhat of a game of chance and the differentiation between great applicants is hard to discern. Hence, you should absolutely throw your hat in the ring for MBB firms, but also don't get your heart too set and cast a wider net with other excellent even if lesser known firms.
+
+A complete list of leading consulting firms can be found **[here](https://www.forbes.com/lists/best-management-consulting-firms/).**
+
+[See Example Job Descriptions](https://www.linkedin.com/jobs/search/?currentJobId=4219660438&f_C=5210%2C5509%2C1038%2C224605%2C1784%2C2114%2C1371&f_E=1%2C2&f_F=cnsl&keywords=consultant&origin=JOB_SEARCH_PAGE_JOB_FILTER&refresh=true&sortBy=R)
+
+## Corporate Strategy {.unnumbered}
+
+The Corporate Strategy track is best for students interested in being **internal advisors** to senior leadership teams to shape long-term direction, drive growth initiatives, and create sustainable competitive advantages. Corporate strategists operate at the intersection of analysis and execution, translating market insights and organizational capabilities into actionable strategic plans that drive business performance.
+
+Corporate strategy professionals are embedded within organizations as full-time employees, working closely with C-suite executives, business unit leaders, and cross-functional teams to identify opportunities, evaluate strategic options, and guide critical business decisions. Unlike external consultants, corporate strategists develop deep institutional knowledge and maintain long-term accountability for the outcomes of their recommendations, giving them unique insight into what actually works within their specific organizational context.
+
+Corporate strategy roles exist across virtually every industry, from Fortune 500 corporations to high-growth startups, each offering unique challenges and learning opportunities.
+
+Corporate strategists typically focus on areas such as market analysis, competitive intelligence, merger and acquisition evaluation, new business development, strategic planning, and performance improvement initiatives.
+
+Many corporate strategists also transition between internal roles and external consulting positions throughout their careers, leveraging the complementary skill sets developed in each environment.
+
+Leading companies known for strong corporate strategy functions include Amazon, Apple, Google, Microsoft, JPMorgan Chase, Johnson & Johnson, Procter & Gamble, and many others across diverse industries. 
+
+See [Example Job Descriptions](https://www.linkedin.com/jobs/search/?currentJobId=4256357986&f_E=1%2C2&geoId=103644278&keywords=strategy%20analyst&origin=JOB_SEARCH_PAGE_KEYWORD_AUTOCOMPLETE&refresh=true)
+
+
+## Product {.unnumbered}
+
+Product managers serve as the strategic orchestrators who bridge the gap between customer needs, business objectives, and technical capabilities to bring innovative products and features to market. Often described as "mini-CEOs" of their products, product managers are responsible for defining product vision, prioritizing features, and coordinating cross-functional teams to deliver solutions that create meaningful value for users and drive business growth. 
+
+Product managers work as internal leaders within organizations, collaborating closely with engineering, design, marketing, sales, and executive teams to guide product development from conception to launch and beyond. AI is allowing product managers to do more than ever before and be less reliant on engineering and design teams to decide what gets built.
 
 Students who join the Product track complete 1 of 4 experiential learning experiences:
 
-1. Associate Product Manager (APM) Internship: Students complete a 4-month product focused internship (unpaid) starting Winter of their junior year.
-2. Associate Product Builder (APB) Fellowship: Students build and deliver to market a pre-validated product concept from the Strategy Foundry, starting Winter of their junior year.
-3. Sandbox: Students build and launch a digital product from scratch starting in the summer after their junior year.
-4. Crocker Innovation Fellowship: Students design and build a physical product from scratch starting Winter of their junior year.
+1.  Associate Product Manager (APM) Internship: Students complete a 4-month product focused internship (unpaid) starting Winter of their junior year.
+2.  Associate Product Builder (APB) Fellowship: Students build and deliver to market a pre-validated product concept from the Strategy Foundry, starting Winter of their junior year.
+3.  Sandbox: Students build and launch a digital product from scratch starting in the summer after their junior year.
+4.  Crocker Innovation Fellowship: Students design and build a physical product from scratch starting Winter of their junior year.
 
 The Associate Product Manager (APM) Internship and the Associate Product Builder (APB) Fellowship are administered by the Strategy program. About 10-15 Strategy students participate in each experience each year.
 
@@ -47,17 +76,17 @@ Mid-way through Fall semester, interested students will interview with both a fa
 
 ### Associate Product Builder (APB) Fellowship (tentatively offered starting Winter 2026; details subject to change) {.unnumbered}
 
-The Associate Product Builder (APB) Fellowship is a 12-month experiential learning experience where students build and deliver to market a pre-validated product concept from the Strategy Foundry and seek to earn real revenue, starting Winter of their junior year. The experience is partly modeled after LinkedIn's first-ever [Associate Product Builder (APB) program](https://careers.linkedin.com/pathways-programs/entry-level/apb). 
+The Associate Product Builder (APB) Fellowship is a 12-month experiential learning experience where students build and deliver to market a pre-validated product concept from the Strategy Foundry and seek to earn real revenue, starting Winter of their junior year. The experience is partly modeled after LinkedIn's first-ever [Associate Product Builder (APB) program](https://careers.linkedin.com/pathways-programs/entry-level/apb).
 
 "We are entering a new era of building. And the full-stack builder archetype is arising with it. A full-stack builder is capable of developing experiences, combining skills & expertise, across traditionally distinct domains (e.g. design, product management, technology, business strategy)."
 
 Tomer Cohen, Chief Product Officer at LinkedIn
 
-- Teams of 3-5 students work on the business full-time over the Spring and Summer after their junior year and part-time (10-20 hours) in the Fall and Winter Semester of their senior year. 
-- Participating students receive a stipend to cover their tuition during the Spring and Summer terms. Students with additional financial needs should speak with the program director.
-- Students receive a loan of between $1,000 and $5,000 to seed their business. Loans should be repaid by revenue generated over the following 12 months with a market interest rate. Re-paid dollars go back into the pool to fund future businesses and create a reserve. After the loan is repaid in full, students split any additional revenue after costs equally or may choose to reinvest it in the company. There is no credit impact to student's credit profile if unpaid, however, effort towards loan repayment is considered as part of course grading.
-- At the completion of the 12-month experience, students wanting to continue working on the company who have repaid their loan can mutually agree on equity positions and take the company forward. 
-- If students don't desire to take the company forward, the idea and IP goes back to the Strategy Foundry or is wound down.
+-   Teams of 3-5 students work on the business full-time over the Spring and Summer after their junior year and part-time (10-20 hours) in the Fall and Winter Semester of their senior year.
+-   Participating students receive a stipend to cover their tuition during the Spring and Summer terms. Students with additional financial needs should speak with the program director.
+-   Students receive a loan of between \$1,000 and \$5,000 to seed their business. Loans should be repaid by revenue generated over the following 12 months with a market interest rate. Re-paid dollars go back into the pool to fund future businesses and create a reserve. After the loan is repaid in full, students split any additional revenue after costs equally or may choose to reinvest it in the company. There is no credit impact to student's credit profile if unpaid, however, effort towards loan repayment is considered as part of course grading.
+-   At the completion of the 12-month experience, students wanting to continue working on the company who have repaid their loan can mutually agree on equity positions and take the company forward.
+-   If students don't desire to take the company forward, the idea and IP goes back to the Strategy Foundry or is wound down.
 
 **Students interested in being considered should enroll during Fall of their junior in both:**
 
@@ -86,14 +115,18 @@ Email crockerfellows\@gmail.com with any questions.
 
 There are no formal pre-reqs.
 
-## Research Track {.unnumbered}
+## Research {.unnumbered}
 
-The Research Track is designed for students who would like to work on and publish a paper for their experiential learning experience. This track is excellent preparation for a Ph.D. in Strategy or a related field.
+The Research track represents the intellectual foundation of strategic thinking, where professionals dedicate themselves to advancing the frontiers of business knowledge through rigorous analysis, original research, and innovative frameworks that shape how organizations understand and navigate complex challenges. This track attracts individuals passionate about deep inquiry and knowledge creation, who thrive on uncovering insights that can transform industries and influence strategic decision-making at the highest levels. Some students from this track will go on to pursue PhD's in Strategy or a related field. 
+
+For their experiential learning experience, students will work on writing and publishing an original piece of research.
 
 Students interested in the Research Track should enroll in the following courses:
 
 MBA 593R Section 2 (Fall of Junior Year): Introduction to PhD-level Research in Management.
 
 STRAT 490R (Winter): Strategy Pre-PhD Prep.
+
+STRAT 421 (Research Section):	Strategy Implementation.
 
 Other STATS and ECON classes that will develop your quantitative and data analytic skills.
