--- a/02-tracks.qmd
+++ b/02-tracks.qmd
@@ -13,13 +13,13 @@ Originally known as the Business Analyst track, the Management Consulting track 
 
 Management consultants are **external advisors** to organizations that help them solve challenging business problems, improve performance, and implement strategic changes. Consultants bring specialized expertise, objective perspectives, and a [structured problem-solving approach](https://slideworks.io/resources/mckinsey-problem-solving-process) when companies are looking for support to address a particular problem effectively.
 
-Despite the disruption AI is causing throughout the economy and the impact of DOGE (see [**here**](https://managementconsulted.com/podcast/doge-federal-consulting-spend/) and [**here**](https://www.sourceglobalresearch.com/blog-post/the-impact-of-doge-on-the-global-consulting-industry)), demand for management consultants remains high with estimated revenues of ~\$400BN annually in the US. In fact, the AI disruption presents new opportunities for management consultants to add value to organizations addressing the effects of AI on their workforce and on their business.
+Despite the disruption AI is causing throughout the economy and the impact of DOGE (see [**here**](https://managementconsulted.com/podcast/doge-federal-consulting-spend/) and [**here**](https://www.sourceglobalresearch.com/blog-post/the-impact-of-doge-on-the-global-consulting-industry)), demand for management consultants remains high with estimated revenues of \~\$400BN annually in the US. In fact, the AI disruption presents new opportunities for management consultants to add value to organizations addressing the effects of AI on their workforce and on their business.
 
-McKinsey, Bain, and BCG (MBB) are the best known global consulting firms, however there is a long list of other excellent firms that you should consider. Because of the notoriety of the MBB firms, they receive an exceptionally high volume of applications, generally only hiring [1\% of applicants](https://casecoach.com/b/how-selective-are-bain-bcg-and-mckinsey-through-the-application-process/).
+McKinsey, Bain, and BCG (MBB) are the best known global consulting firms, however there is a long list of other excellent firms that you should consider. Because of the notoriety of the MBB firms, they receive an exceptionally high volume of applications, generally only hiring [1% of applicants](https://casecoach.com/b/how-selective-are-bain-bcg-and-mckinsey-through-the-application-process/).
 
 When firms are only hiring one percent of applicants, it becomes somewhat of a game of chance and the differentiation between great applicants is hard to discern. Hence, you should absolutely throw your hat in the ring for MBB firms, but also don't get your heart too set and cast a wider net with other excellent even if lesser known firms.
 
-A complete list of leading consulting firms can be found **[here](https://www.forbes.com/lists/best-management-consulting-firms/).**
+A complete list of leading consulting firms can be found [**here**](https://www.forbes.com/lists/best-management-consulting-firms/)**.**
 
 [See Example Job Descriptions](https://www.linkedin.com/jobs/search/?currentJobId=4219660438&f_C=5210%2C5509%2C1038%2C224605%2C1784%2C2114%2C1371&f_E=1%2C2&f_F=cnsl&keywords=consultant&origin=JOB_SEARCH_PAGE_JOB_FILTER&refresh=true&sortBy=R)
 
@@ -35,14 +35,13 @@ Corporate strategists typically focus on areas such as market analysis, competit
 
 Many corporate strategists also transition between internal roles and external consulting positions throughout their careers, leveraging the complementary skill sets developed in each environment.
 
-Leading companies known for strong corporate strategy functions include Amazon, Apple, Google, Microsoft, JPMorgan Chase, Johnson & Johnson, Procter & Gamble, and many others across diverse industries. 
+Leading companies known for strong corporate strategy functions include Amazon, Apple, Google, Microsoft, JPMorgan Chase, Johnson & Johnson, Procter & Gamble, and many others across diverse industries.
 
 See [Example Job Descriptions](https://www.linkedin.com/jobs/search/?currentJobId=4256357986&f_E=1%2C2&geoId=103644278&keywords=strategy%20analyst&origin=JOB_SEARCH_PAGE_KEYWORD_AUTOCOMPLETE&refresh=true)
 
-
 ## Product {.unnumbered}
 
-Product managers serve as the strategic orchestrators who bridge the gap between customer needs, business objectives, and technical capabilities to bring innovative products and features to market. Often described as "mini-CEOs" of their products, product managers are responsible for defining product vision, prioritizing features, and coordinating cross-functional teams to deliver solutions that create meaningful value for users and drive business growth. 
+Product managers serve as the strategic orchestrators who bridge the gap between customer needs, business objectives, and technical capabilities to bring innovative products and features to market. Often described as "mini-CEOs" of their products, product managers are responsible for defining product vision, prioritizing features, and coordinating cross-functional teams to deliver solutions that create meaningful value for users and drive business growth.
 
 Product managers work as internal leaders within organizations, collaborating closely with engineering, design, marketing, sales, and executive teams to guide product development from conception to launch and beyond. AI is allowing product managers to do more than ever before and be less reliant on engineering and design teams to decide what gets built.
 
@@ -74,7 +73,7 @@ Mid-way through Fall semester, interested students will interview with both a fa
 
 ![](images/2025-strategy-pm-track-flyer.png){fig-align="center" width="75%"}
 
-### Associate Product Builder (APB) Fellowship (tentatively offered starting Winter 2026; details subject to change) {.unnumbered}
+### Associate Product Builder (APB) Fellowship\* {.unnumbered}
 
 The Associate Product Builder (APB) Fellowship is a 12-month experiential learning experience where students build and deliver to market a pre-validated product concept from the Strategy Foundry and seek to earn real revenue, starting Winter of their junior year. The experience is partly modeled after LinkedIn's first-ever [Associate Product Builder (APB) program](https://careers.linkedin.com/pathways-programs/entry-level/apb).
 
@@ -93,6 +92,10 @@ Tomer Cohen, Chief Product Officer at LinkedIn
 -   STRAT 490R - Creating Digital Products with AI: Strategy & Prototyping
 -   MSB 342: Product Management Lecture Series (1.0 credit)
 
+**\*The APB experience is being explored and is not guaranteed to happen. Student may do the APM experience if not, with no classes wasted.**
+
+[**Register your interest here**](https://docs.google.com/forms/d/e/1FAIpQLSeIuWTANS1VbF4ORhfvfz9rXDGjzhwe7P-yjXvpsZGwNdrrMQ/viewform?usp=sharing&ouid=102863173559950072505) to stay informed on the APB opportunity.
+
 ### Sandbox {.unnumbered}
 
 [Sandbox](https://creators.byu.edu/sandbox/sandbox) students spend two semesters working in a small team to build and launch launch a software tech business from scratch—one of the best experiences those interested in tech entrepreneurship or product management can get in school.
@@ -105,7 +108,7 @@ Applications for Sandbox are completed during Winter Semester.
 
 There are no formal pre-reqs.
 
-### Crocker Innovation Fellowship (6.0 credits) {.unnumbered}
+### Crocker Innovation Fellowship {.unnumbered}
 
 The [Crocker Innovation Fellowship](https://crockerinnovationfellows.com/) is an interdisciplinary innovation program that runs from January to December each year. Students study and practice principles of innovation in Winter semester, learn through a summer internship, and then study and practice principles of innovation commercialization in the Fall semester. Interested students from all majors are encouraged to apply.
 
@@ -117,7 +120,7 @@ There are no formal pre-reqs.
 
 ## Research {.unnumbered}
 
-The Research track represents the intellectual foundation of strategic thinking, where professionals dedicate themselves to advancing the frontiers of business knowledge through rigorous analysis, original research, and innovative frameworks that shape how organizations understand and navigate complex challenges. This track attracts individuals passionate about deep inquiry and knowledge creation, who thrive on uncovering insights that can transform industries and influence strategic decision-making at the highest levels. Some students from this track will go on to pursue PhD's in Strategy or a related field. 
+The Research track represents the intellectual foundation of strategic thinking, where professionals dedicate themselves to advancing the frontiers of business knowledge through rigorous analysis, original research, and innovative frameworks that shape how organizations understand and navigate complex challenges. This track attracts individuals passionate about deep inquiry and knowledge creation, who thrive on uncovering insights that can transform industries and influence strategic decision-making at the highest levels. Some students from this track will go on to pursue PhD's in Strategy or a related field.
 
 For their experiential learning experience, students will work on writing and publishing an original piece of research.
 
@@ -127,6 +130,6 @@ MBA 593R Section 2 (Fall of Junior Year): Introduction to PhD-level Research in 
 
 STRAT 490R (Winter): Strategy Pre-PhD Prep.
 
-STRAT 421 (Research Section):	Strategy Implementation.
+STRAT 421 (Research Section): Strategy Implementation.
 
 Other STATS and ECON classes that will develop your quantitative and data analytic skills.
