--- a/02-tracks.qmd
+++ b/02-tracks.qmd
@@ -3,7 +3,9 @@ title: "Tracks"
 editor: visual
 ---
 
-Strategy students complete 1 of 4 tracks, each leading to a different experiential learning experience and likely career outcomes.
+Strategy students have the option to align with 1 of 4 tracks, each leading to a different experiential learning experience and likely career outcomes. Tracks are used to guide which electives you can take and the associated experiential learning experience that is available to you. Regardless of your track, all Strategy majors take the same Junior Core. The purpose of the track options is to guide what electives you choose to take and provide insight on the types of careers a Strategy degree prepares you for. You do not need to officially report your track to the advisement office. You are also free to switch tracks as you progress through the program. However, for the Product and Research tracks, it's helpful for you to decide soon after admission if you want to keep these options open as there are classes you should take your first semester if so.
+
+All tracks are available to Strategy Minors as well, contingent on the associated courses working for their schedule.
 
 ![](images/tracks.png){fig-align="center" width="100%"}
 
@@ -66,10 +68,14 @@ The internship may extend into summer and convert to paid depending on negotiati
 
 **Students interested in being considered should enroll during Fall of their junior in both:**
 
--   MSB 341: Product Management (3.0 credits)
+-   MSB 341: Product Management (cross listed as ENT 401: Entrepreneurial Innovation) (3.0 credits)
 -   MSB 342: Product Management Lecture Series (1.0 credit)
 
-Mid-way through Fall semester, interested students will interview with both a faculty member and prospective companies and may be invited to join the track. Joining the track is not guaranteed and is dependent on performance in the MSB 341/342, the number of available internship slots, and company preferences.
+If your Junior Core schedule conflicts with enrolling in one or both of these courses, you may take *STRAT 490R-001: Creating Digital Products with AI* as an alternative in order to still be eligible for an APM internship.
+
+You must take either *MSB 341: Product Management (cross listed as ENT 401: Entrepreneurial Innovation)* OR *STRAT 490R-001: Creating Digital Products with AI* to be eligible for an APM internship.
+
+Mid-way through Fall semester, interested students will interview with both a faculty member and prospective companies to be matched to an APM internship.
 
 ![](images/2025-strategy-pm-track-flyer.png){fig-align="center" width="75%"}
 
