--- a/02-tracks.qmd
+++ b/02-tracks.qmd
@@ -79,28 +79,28 @@ Mid-way through Fall semester, interested students will interview with both a fa
 
 ![](images/2025-strategy-pm-track-flyer.png){fig-align="center" width="75%"}
 
-### Associate Product Builder (APB) Fellowship\* {.unnumbered}
-
-**\*The APB experience is being explored and is not guaranteed to happen. Student may do the APM experience if not, with no classes wasted.**
+### Associate Product Builder (APB) Fellowship {.unnumbered}
 
 [**Register your interest here**](https://docs.google.com/forms/d/e/1FAIpQLSeIuWTANS1VbF4ORhfvfz9rXDGjzhwe7P-yjXvpsZGwNdrrMQ/viewform?usp=sharing&ouid=102863173559950072505) to stay informed on the APB opportunity.
 
-The Associate Product Builder (APB) Fellowship is a 12-month experiential learning experience where students build and deliver to market a pre-validated product concept from the Strategy Foundry and seek to earn real revenue, starting Winter of their junior year. The experience is partly modeled after LinkedIn's first-ever [Associate Product Builder (APB) program](https://careers.linkedin.com/pathways-programs/entry-level/apb).
+The Associate Product Builder (APB) Fellowship is an 8-12 month experiential learning experience where students commercialize a pre-validated product concept from [BYU's tech transfer office](https://techtransfer.byu.edu/about-us) by seeking to earn real revenue, starting Winter of their junior year. The experience is partly inspired by LinkedIn's first-ever [Associate Product Builder (APB) program](https://careers.linkedin.com/pathways-programs/entry-level/apb) and is intended for students looking to exercise [high-agency (see D&C 58:27-28)](https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/58?lang=eng) and who are excited for a challenge.
 
 "We are entering a new era of building. And the full-stack builder archetype is arising with it. A full-stack builder is capable of developing experiences, combining skills & expertise, across traditionally distinct domains (e.g. design, product management, technology, business strategy)."
 
 Tomer Cohen, Chief Product Officer at LinkedIn
 
--   Teams of 3-5 students work on the business full-time over the Spring and Summer after their junior year and part-time (10-20 hours) in the Fall and Winter Semester of their senior year.
--   Participating students receive a stipend to cover their tuition during the Spring and Summer terms. Students with additional financial needs should speak with the program director.
--   Students receive a loan of between \$1,000 and \$5,000 to seed their business. Loans should be repaid by revenue generated over the following 12 months with a market interest rate. Re-paid dollars go back into the pool to fund future businesses and create a reserve. After the loan is repaid in full, students split any additional revenue after costs equally or may choose to reinvest it in the company. There is no credit impact to student's credit profile if unpaid, however, effort towards loan repayment is considered as part of course grading.
--   At the completion of the 12-month experience, students wanting to continue working on the company who have repaid their loan can mutually agree on equity positions and take the company forward.
--   If students don't desire to take the company forward, the idea and IP goes back to the Strategy Foundry or is wound down.
+-   Teams enroll in STRAT 477R during Winter semester and commit to working 12 hours per week on the business during which they earn three hours of elective credit.
+-   Students commit to continuing to work on the business full-time (40 hours per week) over the Spring and Summer terms at a hourly rate of not less than $13.50 per hour. No outside work is allowed and any course work must be pre-approved by Scott Murff. The experience is intented to replace a full-time summer internship and should be treated as such. 
+-   If students earn revenue from the company they are entitled to 95% of the revenue with a 5% royalty being paid to the university. The tech transfer office retains a 10% dilutable equity stake that is exercised if/when the company is later sold. 
+-   Students are encouraged to pitch the social impact of their product to the Ballard Center to try to win additional business funding
+-   At the completion of the Summer term, students wanting to continue working on the company and retaining an ownership stake have the option of doing so
+-   If students don't desire to take the company forward, the license to commercialize the product is returned to tech transfer office
 
-**Students interested in being considered should enroll during Fall of their junior in both:**
+**Students interested in being considered should have completed one of**
 
 -   STRAT 490R - Creating Digital Products with AI: Strategy & Prototyping
--   MSB 342: Product Management Lecture Series (1.0 credit)
+-   MSB 341: Product Management
+-   ENT 401: Entreprenurial Innovation
 
 ### Sandbox {.unnumbered}
 
